syntax = "proto3";

package org.htc.protobuf.core.entity.event;

import "core/entity/actor.proto";

message EntityEnvelope {
  string entityId = 1;
  bytes payload = 2;
  int32 payload_serializer_id = 3;
  string payload_manifest = 4;
}

message ScheduleEvent {
  uint64 tick = 1;
  string actorRef = 2;
  Identify identify = 3;
}

message FinishEvent {
  string actorRef = 1;
  Identify identify = 2;
  uint64 end = 3;
  ScheduleEvent scheduleEvent = 4;
  string timeManager = 5;
  bool destruct = 6;
}

message SpontaneousEvent {
  uint64 tick = 1;
  string actorRef = 2;
}

message ActorInteractionEvent {
  uint64 tick = 1;
  uint64 lamportTick = 2;
  string actorRefId = 3;
  string actorRef = 4;
  string actorClassType = 5;
  string eventType = 6;
  bytes data_bytes = 7;
  string data_class_manifest = 8;
}

message ActorInteraction{
  uint64 tick = 1;
  uint64 lamportTick = 2;
  string actorRefId = 3;
  string shardRefId = 4;
  string actorRef = 5;
  string actorClassType = 6;
  string eventType = 7;
  bytes data = 8;
  int32 payload_serializer_id = 9;
  string payload_manifest = 10;
  string actorType = 11;
}